core/testing/snapshots/functions/parse_int.snap
### TITLE ###
Basic
### INPUT ###
a = parse_int("2")
print(a + 1)
a = parse_int("6178461748674861")
print(a + 1)
### STDOUT ###
3
6178461748674862

### TITLE ###
Errors on alphabetical
### INPUT ###
a = parse_int("asd")
### STDERR ###
error[RAD20001]: parse_int() failed to parse "asd"
  --> <script>:1:5
  |
1 | a = parse_int("asd")
  |     ^^^^^^^^^^^^^^^^
  |
   = info: rad explain RAD20001


### EXIT ###
1
### TITLE ###
Errors on float
### INPUT ###
a = parse_int("2.4")
### STDERR ###
error[RAD20001]: parse_int() failed to parse "2.4"
  --> <script>:1:5
  |
1 | a = parse_int("2.4")
  |     ^^^^^^^^^^^^^^^^
  |
   = info: rad explain RAD20001


### EXIT ###
1
### TITLE ###
Can catch even if no error
### INPUT ###
a = parse_int("2") catch:
	print("Should not be here")
print("Got: {a}")
### STDOUT ###
Got: 2

### TITLE ###
Can read error if exists
### INPUT ###
a = parse_int("asd") catch:
	pass
print("Got: {a}")
### STDOUT ###
Got: parse_int() failed to parse "asd"

### TITLE ###
Does not error if output not read
### INPUT ###
parse_int("2")
